[gd_scene load_steps=6 format=3 uid="uid://ct8347okhc2x6"]

[ext_resource type="Texture2D" uid="uid://k5j1o5vcqbu4" path="res://Textures/blockSheet.png" id="1_hifh2"]
[ext_resource type="Script" path="res://Scenes/game_board.gd" id="1_ue4gq"]
[ext_resource type="Script" path="res://Scenes/Render.gd" id="3_kapad"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qsj6d"]
texture = ExtResource("1_hifh2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
0:4/0 = 0
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
0:8/0 = 0

[sub_resource type="TileSet" id="TileSet_ylqfh"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_qsj6d")

[node name="GameBoard" type="Node2D"]
script = ExtResource("1_ue4gq")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ylqfh")
rendering_quadrant_size = 12
format = 2
script = ExtResource("3_kapad")

[connection signal="render" from="." to="TileMap" method="_on_game_board_render"]
